# o11y-weekly.github.io

./: LICENSE  README.md  SIDENOTES.md
2023-10-11_Savings_dilemma/: 1-What_is_not_o11y_solutions.md  DRAFT_Profiling.md  README.md
2023-10-18_What_is_not_an_observability_solution/: README.md  What_is_not_an_o11y_solution.md
2023-10-27_Defining_Good_Observability_backend_Trade-offs_and_QoS/: README.md
2023-10-27_Defining_Good_Trade-offs_and_QoS/: README.md
2023-10-XX_What_is_not_an_observability_solution/: NEWS.md  README.md  What_is_not_an_o11y_solution.md
2023-11-09_Monotonicity/: README.md
2023-11-09_Monotonicity/demo/app/: Cargo.toml  Dockerfile  README.md
2023-11-09_Monotonicity/demo/app/src/: main.rs
2023-11-16_Meet_Vector/: README.md
2023-11-16_Monotonicity/: README.md
2023-11-23_Vector_in_action/: README.md
2023-11-30_What_is_OpenTelemetry/: README.md
2023-12-07_Meet_Graphite/: README.md
2023-12-14_Meet_Prometheus/: README.md
2024-01-31_OpenTelemetry_Looks_Good_To_Me/: README.md  SIDENOTES.md
2024-01-XX_GrafanaLab_demo/: README.md  SIDENOTES.md
2024-02-28_OpenTelemetry_Looks_Good_To_Me_dotnet/: DEBUG.md  README.md  compose.yml  dotnet.Dockerfile  dotnet.debug.Dockerfile  env.sh
2024-07-XX_CloudWatch_Grafana/: README.md
2024-XX-XX_OpenTelemetry_Looks_Good_To_Me_dotnet/: dotnet.debug.Dockerfile  down.sh
2025-01-XX_Meet_Prometheus/: README.md  compose.yml
_DRAFT/: 2024-02_Monitoring_GrafanaCloud.md  2024-XX_Datalifecycle.md  2024_XX_Observability_vs_Dataplatform.md  DRAFT_Grafana_Agent.md  DRAFT_Responsibility_model.md  (+2 more)
(+244 files in other folders)
