[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = [
    "rt-multi-thread",
    "net",
    "macros",
    "signal",
] }
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
prometheus-client = "0.22"

opentelemetry = { version = "0.21" }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.14", features = ["http-proto", "reqwest-client"] }
